# Sol404

./: .gitignore  Anchor.toml  package-lock.json  package.json
UriData/: jelly.json  nft.json  usdc.json
programs/sol404/: Cargo.toml
programs/sol404/src/: lib.rs
programs/sol404/src/instructions/: buytokens.rs  createmint.rs  usetokens.rs
tests/: sol404.ts
