[package]
name = "sol404"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol404"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.30.0", features = ["metadata"]}
mpl-token-metadata = "4.1.2"
solana-program = "1.18.11"
